Stable working dApp before memo transaction

--- a/programs/healthkey_protocol/Cargo.toml
+++ b/programs/healthkey_protocol/Cargo.toml
@@ -1,24 +1,21 @@
 [package]
-name        = "healthkey_protocol"
-version     = "0.1.0"
-edition     = "2021"
+name = "healthkey_protocol"
+version = "0.1.0"
+edition = "2021"
 description = "Created with Anchor"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name       = "healthkey_protocol"
+name = "healthkey_protocol"
 
-# ─── Only enable idl-build when you explicitly ask for it ────────────────────
 [features]
-default       = []
-cpi           = ["no-entrypoint"]
-no-entrypoint = []
-no-idl        = []
-no-log-ix-name = []
-idl-build     = ["anchor-spl/idl-build"]
+# nothing on by default for BPF builds
+default = []
+# only used when you explicitly want to include external crate types in the IDL
+idl-build = ["anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.31.1"
-
-# Disable ALL default features (including idl-build) and only pull in `token`
-anchor-spl = { version = "0.31.1", default-features = false, features = ["token"] }
+# enable init_if_needed so you can use #[account(init_if_needed, ...)]
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+# correct feature names for this version
+anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }
