--- a/healthkey-frontend/package.json
+++ b/healthkey-frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@solana/spl-token": "^0.4.13",
+    "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.98.4",
     "bn.js": "^5.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
