--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.11.17",
     "@coral-xyz/anchor": "^0.31.1"
   },
   "devDependencies": {
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "chai": "^4.3.4",
+    "crypto-browserify": "^3.12.1",
     "mocha": "^9.0.3",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   }
 }
