--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,62 @@
-.anchor
-.DS_Store
-target
-**/*.rs.bk
-node_modules
-test-ledger
-.yarn
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
-# Secrets
-server/.env
+# Build output
+dist/
+build/
+.cache/
+.tmp/
+
+# Vite
+.vite/
+vite.config.ts.timestamp-*
+vite.config.js.timestamp-*
+
+# Local env files
+.env
+.env.*
+!.env.example
+
+# Vercel
+.vercel/
+
+# Logs
+*.log
+*.log.*
+logs/
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# IDE/editor
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Test/coverage
+coverage/
+*.lcov
+
+# Git
+.gitignore
+
+# Misc
+*.tgz
+*.tar.gz
+*.zip
+*.bak
+
+target/
